foto del barrio añadida

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1>Títlo de Ejercicio 3</h1>
-    <img src="Deep.webp" alt=""/>
+    <img src="elcardonal.jpg" alt=""/>
     <p>Puntos por partido de Aldama: 25</p>
 </body>
 </html>
