--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 </head>
 <body>
-    <h1>Títlo de Ejercicio 3</h1>
+    <h1>Títlo de Ejercicio 7</h1>
     <img src="elcardonal.jpg" alt=""/>
-    <p>Puntos por partido de Aldama: 25</p>
+    <p>Mi barrio</p>
 </body>
 </html>
