Texto del municipio de taco añadido

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 </head>
 <body>
     <h1>Títlo de Ejercicio 7</h1>
+    <p>Taco es una de las entidades de población que forman el municipio de San Cristóbal de La Laguna, en la isla de Tenerife —Canarias, España—.
+
+        Administrativamente se incluye en la Zona 3 del municipio.1​
+        
+        Taco está formado a su vez por los núcleos o barrios diferenciados de El Cardonal, El Pilar, Las Torres, San Luis Gonzaga, San Matías, San Miguel de Chimisay y Zona Industrial de Taco.2​</p>
     <img src="elcardonal.jpg" alt=""/>
     <p>Mi barrio</p>
 </body>
