Añadido mi nombre completo en la parte superior

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
     <h1>Títlo de Ejercicio 7</h1>
+    <p>Samuel Alvarado Yanes</p>
     <p>Taco es una de las entidades de población que forman el municipio de San Cristóbal de La Laguna, en la isla de Tenerife —Canarias, España—.
 
         Administrativamente se incluye en la Zona 3 del municipio.1​
