--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
         Taco está formado a su vez por los núcleos o barrios diferenciados de El Cardonal, El Pilar, Las Torres, San Luis Gonzaga, San Matías, San Miguel de Chimisay y Zona Industrial de Taco.2​</p>
     <img src="elcardonal.jpg" alt=""/>
     <p>Mi barrio</p>
+
+    <br>
+    <p>Editado por Sergio, el famoso del paso es el volcan</p>
+    <img src="Volcan.jpg" alt=""/>
 </body>
 </html>
