Volcán cambio de imagen

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
     <br>
     <p>Editado por Sergio, el famoso del paso es el volcan</p>
-    <img src="Volcan.jpg" alt=""/>
+    <img src="Volcan.jpg" alt=""  height="200px" width="250px" />
 </body>
 </html>
